[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.87"
derive_more = { version = "2.0.1", features = ["full"] }
json = "0.12.4"
serde = {version = "1.0.218",features = ["derive"]}
surrealdb = "2.2.1"
uuid = "1.15.1"
validator = {version = " 0.20.0", features = ["derive"]}
